tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-asm-sections.wyst
module syntax.checked_asm_legacy

fn legacy(value: u64) {
  #asm(effects: none) {
    inputs {
      input = gpr(value)
    }
    clobbers {
      memory
    }
    body {
      mov x0, {input}
    }
  }
}
